<resources>
    <string name="app_name">CloneUber</string>
    <string name="title_start">Pide un viaje cuando lo necesites.</string>
    <string name="text_nxn">NXN informatic Solutions</string>
    <string name="text_conductor">SOY CONDUCTOR</string>
    <string name="text_cliente">SOY CLIENTE</string>
    <string name="select_options">Selecciona una Opción</string>
    <string name="text_option1">YA TENGO CUENTA</string>
    <string name="text_option2">REGISTRARME AHORA</string>
    <string name="txt_login">Login</string>
    <string name="txt_nameUber">Uber Eats</string>
    <string name="txt_correo">Correo Electrónico</string>
    <string name="txt_password">Contraseña</string>
    <string name="txt_register">Aún no te has registrado?</string>
    <string name="txt_registrarse">Registrarse</string>
    <string name="txt_nombre">Nombre Completo</string>
    <string name="txt_enviar">Guardar</string>
    <string name="txt_sesion">Iniciar Sesión</string>
    <string name="txt_option">Seleccione una opción</string>
    <string name="error_credentials">El correo o la contraseña son incorrectos</string>
    <string name="message_success_login">El Login se realizó exitosamente</string>
    <string name="error_password">La contraseña debe tener más de 6 carácteres</string>
    <string name="error_esEmpty">La contraseña y el email son obligatorias</string>
    <string name="txt_message_login">Espere un momento</string>
    <string name="error_validate_register">Ingresar todos los campos</string>
    <string name="error_register_user">No se pudo registrar al usuario</string>
    <string name="register_success">Registro exitoso!</string>
    <string name="txt_cliente">CLIENTE</string>
    <string name="txt_conductor">CONDUCTOR</string>
    <string name="txt_marca_vehicle">Marca de Vehículo</string>
    <string name="txt_placa_vehicle">Placa del Vehículo</string>
    <string name="txt_next">Siguiente</string>
    <string name="txt_cerrar_sesion">Cerrar Sesión</string>
    <string name="txt_error_location">Proporcionar los permisos para continuar</string>
    <string name="txt_message_permission">Esta Aplicación requiere de los permisos de ubicación para continuar</string>
    <string name="txt_conectarse">Conectarse</string>
    <string name="txt_desconectarse">Desconectarse</string>
    <string name="txt_error_gps_disconect">No te puedes desconectar</string>
    <string name="txt_driver_disponible">Conductor disponible</string>
    <string name="txt_origen">Lugar de Recogida</string>
    <string name="txt_destino">Destino</string>
    <string name="txt_solicitar_viaje">SOLICITAR AHORA</string>
    <string name="txt_error_places">Debe seleccionar el lugar de recogida y el destino</string>
    <string name="txt_place_origen">Origen: </string>
    <string name="txt_place_destination">Destino: </string>
    <string name="txt_tiempo">Tiempo: </string>
    <string name="txt_distance">Distancia: </string>
    <string name="txt_buscando_conductor">BUSCANDO CONDUCTOR...</string>
    <string name="txt_cancel_viaje">CANCELAR VIAJE</string>
    <string name="txt_driver_encontrado">CONDUCTOR ENCONTRADO\nESPERANDO RESPUESTA</string>
    <string name="txt_not_driver">No se encontro un Conductor</string>
    <string name="txt_send_notification">La notificación se ha envaido correctamente!</string>
    <string name="txt_not_notification">No se pudo enviar la notificación</string>
    <string name="txt_not_Accept_travel_driver">El conductor no aceptó el viaje</string>
    <string name="txt_mapa_travel">MAPA DEL VIAJE DEL CONDUCTOR</string>
    <string name="txt_name_user">Nombre del usuario</string>
    <string name="txt_email_user">Email del usuario</string>
    <string name="txt_lugar_recogida">Lugar de recogida</string>
    <string name="txt_lugar_Destino">Destino</string>
    <string name="txt_name_driver">Nombre de conductor</string>
    <string name="txt_email_driver">Email del conductor</string>
    <string name="txt_viaje">INICIAR VIAJE</string>
    <string name="txt_finalizar">FINALIZAR VIAJE</string>
    <string name="txt_cerca_position_client">Estas cerca a la posición del cliente</string>
    <string name="txt_error_position_recogida">Debes estar más cerca a la posición de recogida.</string>
    <string name="txt_estatus">Estado</string>
    <string name="txt_calificar_driver">CALIFICAR CONDUCTOR</string>
    <string name="txt_travel_aceptado">Estado: Aceptado</string>
    <string name="txt_travel_iniciado">Estado: Viaje iniciado</string>
    <string name="txt_travel_finalizado">Estado: Viaje finalizado</string>
    <string name="txt_travel_client_finish">Viaje finalizado</string>
    <string name="txt_travel_client_iniciado">Viaje iniciado</string>
    <string name="txt_hasta">Tacna Peru Av.Ejercito</string>
    <string name="txt_desde">Tacna Peru Av.Ejercito</string>
    <string name="txt_value_hasta">Hasta</string>
    <string name="txt_value_desde">Desde</string>
    <string name="txt_travel_finish">VIAJE FINALIZADO</string>
    <string name="txt_calificar_client">CALIFICAR CLIENTE</string>
    <string name="txt_error_calification">Debes ingresar la calificación</string>
    <string name="txt_success_calification">La calificación se guardó correctamente</string>
    <string name="txt_time_llegar">Tiempo de llegada</string>
    <string name="txt_notification_distance">Distancia</string>
    <string name="txt_aceptar">ACEPTAR</string>
    <string name="txt_rechazar">RECHAZAR</string>
    <string name="txt_cancel_travel">La solicitud se canceló correctamente</string>
    <string name="txt_cancel_travel_client">El cliente cancelo el viaje</string>
    <string name="txt_profile_update">ACTUALIZAR PERFIL</string>
    <string name="txt_perfil_usuario">Perfil de Usuario</string>
    <string name="txt_required_img_name">Ingresa la imagen y el nombre</string>
    <string name="txt_img_upload">Hubo un error al subir la imagen</string>
    <string name="txt_name">Nombre: </string>
    <string name="txt_calificacion">Calificacion obtenida:</string>
    <string name="txt_history_travel">Historial de viajes</string>
</resources>
