<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.driver.CalificationClientActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_travel_finish"
            android:textAlignment="center"
            android:textSize="22sp"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/black"/>

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="180dp"
            android:layout_height="180dp"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="782-check-mark-success.json"
            app:lottie_autoPlay="true"
            app:lottie_loop="false"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"/>

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_value_desde"
        android:textAlignment="center"
        android:textSize="22sp"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/textViewOriginCalification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_desde"
            android:textAlignment="center"
            android:textSize="17sp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_value_hasta"
            android:textAlignment="center"
            android:textSize="22sp"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/textViewDestinationCalification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_hasta"
            android:textAlignment="center"
            android:textSize="17sp"
            android:layout_marginTop="5dp"/>

        <RatingBar
            android:id="@+id/RatinBarCalification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnCalification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/txt_calificar_driver"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/colorPrimaryDark"
        android:textColor="@color/colorWhite"
        android:layout_margin="20dp"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>