<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.driver.MapDriverBookingActivity">

    <Button
        android:id="@+id/btnStartBooking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_viaje"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/colorWhite"
        android:textColor="@color/colorPrimaryDark"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/btnFinishBooking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_finalizar"
        android:background="@drawable/rounded_button"
        android:visibility="gone"
        android:backgroundTint="@android:color/holo_red_dark"
        android:textColor="@color/colorWhite"
        android:layout_margin="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <fragment
            android:id="@+id/map"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:name="com.google.android.gms.maps.SupportMapFragment"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="2dp">

                <ImageView
                    android:id="@+id/imageViewClientBooking"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_margin="10dp"
                    android:src="@drawable/user"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewOriginClientBooking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_lugar_recogida"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/textViewDestinationClientBooking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_lugar_Destino"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/textViewClientBooking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_name_user"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:textSize="16sp"/>

                    <TextView
                        android:id="@+id/textViewEmailClientBooking"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_email_user"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:textSize="16sp"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>