<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/uber"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_start"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:layout_margin="40dp"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_nxn"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnIamDriver"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:textColor="@color/colorWhite"
                android:backgroundTint="@color/color_BlueLight"
                android:text="@string/text_conductor"
                android:layout_marginRight="5dp"/>

            <Button
                android:id="@+id/btnIAmClient"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/colorWhite"
                android:layout_height="wrap_content"
                android:text="@string/text_cliente"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>