<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activities.driver.NotificationBookingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.github.florent37.shapeofview.shapes.DiagonalView
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:elevation="4dp"
                app:shape_diagonal_angle="10"
                app:shape_diagonal_direction="left"
                app:shape_diagonal_position="bottom">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"/>

                <ImageView
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:src="@drawable/icon_map"
                    android:layout_gravity="center|top"/>

            </com.github.florent37.shapeofview.shapes.DiagonalView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_value_desde"
                android:textAlignment="center"
                android:textSize="22sp"
                android:layout_marginTop="5dp"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/textViewOrigin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_desde"
                android:textAlignment="center"
                android:textSize="17sp"
                android:layout_marginTop="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_value_hasta"
                android:textAlignment="center"
                android:textSize="22sp"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/textViewDestination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_hasta"
                android:textAlignment="center"
                android:textSize="17sp"
                android:layout_marginTop="5dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/ic_timer_black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_time_llegar"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:id="@+id/textViewMin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0 Min"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/ic_map_black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_notification_distance"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"/>

                    <TextView
                        android:id="@+id/textViewDistance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0 Km"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/textViewCounter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="10"
                android:textAlignment="center"
                android:textSize="38sp"
                android:layout_marginTop="10dp"/>

        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:layout_margin="20dp">

        <Button
            android:id="@+id/btnAcceptBooking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_aceptar"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/colorPrimaryDark"
            android:textColor="@color/colorWhite"
            android:layout_marginRight="5dp"/>

        <Button
            android:id="@+id/btnCancelBooking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_rechazar"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:backgroundTint="#595959"
            android:textColor="@color/colorWhite"
            android:layout_marginRight="5dp"/>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>