<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary"
    tools:context=".activities.SelectOptionsAuthActivity">

    <include layout="@layout/action_bar_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/uber"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_options"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:layout_margin="40dp"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:textColor="@color/colorWhite"
            android:backgroundTint="@color/color_BlueLight"
            android:text="@string/text_option1"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"/>

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/colorWhite"
            android:layout_height="wrap_content"
            android:text="@string/text_option2"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"/>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>