<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bgHeader"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@drawable/header_register"
        android:theme="@style/ToolbarTheme"
        android:elevation="5dp"/>

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/txt_registrarse"/>

    <ImageView
        android:id="@+id/circle1"
        android:layout_width="134dp"
        android:layout_height="134dp"
        android:layout_below="@+id/bgHeader"
        android:layout_marginTop="-5dp"
        android:layout_marginLeft="-25dp"
        android:src="@drawable/circletransparent"/>

    <ImageView
        android:id="@+id/circle3"
        android:layout_width="182dp"
        android:layout_height="182dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="-80dp"
        android:layout_marginBottom="-30dp"
        android:src="@drawable/circle"/>


    <androidx.cardview.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bgHeader"
        app:cardCornerRadius="10dp"
        android:layout_margin="20dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_nombre"
                android:layout_margin="10dp"
                android:textSize="14sp"
                android:textColor="@color/color_Purple"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/txtInputNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_correo"
                android:layout_margin="10dp"
                android:textSize="14sp"
                android:textColor="@color/color_Purple"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/txtInputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_password"
                android:layout_margin="10dp"
                android:textSize="14sp"
                android:textColor="@color/color_Purple"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/txtInputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cv"
        android:layout_alignLeft="@+id/cv"
        android:layout_alignRight="@+id/cv"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="-50dp"
        android:elevation="10dp">

        <Button
            android:id="@+id/btnRegisterSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_ui"
            android:text="@string/txt_enviar"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/cv"
        android:layout_alignRight="@+id/cv"
        android:layout_marginTop="-20dp"
        android:layout_marginRight="-20dp"
        android:elevation="10dp">

        <ImageButton
            android:id="@+id/btnRegister"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_ui"
            android:src="@drawable/ic_arrow" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tvLogin"
        android:textColor="@color/color_Blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:elevation="5dp"
        android:text="@string/txt_sesion"
        android:textSize="14sp"/>

</RelativeLayout>